[tool.poetry]
name = "mq"
version = "0.1.0"
description = "PBS Queue Helper"
authors = ["Alexius Wadell <awadell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
jq = "^1.6.0"
tabulate = "^0.9.0"
rich = "^13.7.1"

[tool.poetry.scripts]
mq = "mq.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
